fixed gap on phone view, made collapsible menu, added footer

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,6 +11,7 @@ html, body {
 }
 .balance { margin-left: auto; margin-right: auto;}
 .p5 { padding: 5px; }
+.p20 { padding: 20px; }
 .pr20 { padding-right: 20px;}
 .mb10 { margin-bottom: 10px; }
 .mb20 { margin-bottom: 20px; }
@@ -18,6 +19,7 @@ html, body {
 .bdrRad0 { border-radius: 0px; }
 .hFull { calc(100vh - 50px); }
 .wFull { width: 100%; }
+.txtC { text-align: center; }
 .csrPointer { cursor: pointer;}
 .errorMessage {
 	background-color: #F00; 
@@ -36,4 +38,11 @@ html, body {
   padding-top: 15px;
   padding-bottom: 15px;
   line-height: 20px;
+}
+.bgBlack {
+	background-color: #000;
+	color: #FFF;
+}
+.bgBlack a {
+	color: #D4650B;
 }
